# ESM

./: .gitignore  Cargo.toml  README.md  run_e1.ps1
crates/esm-cli/: Cargo.toml
crates/esm-cli/src/: main.rs
crates/esm-core/: Cargo.toml
crates/esm-core/src/: claims.rs  encoder.rs  event.rs  feature.rs  genesis.rs  ids.rs  ledger.rs  lib.rs  metrics.rs  rng.rs
crates/esm-core/src/encoder/: composition.rs  context.rs  d.rs  e.rs  mod.rs
crates/esm-runner/: Cargo.toml
crates/esm-runner/src/: e1a.rs  e1b.rs  e1d.rs  lib.rs  stream.rs
crates/esm-tools/: Cargo.toml
crates/esm-tools/src/: lib.rs
docs/: ARCHITECTURE_V0_4.md  E1A_EXPERIMENT_REPORT.md  E1B_PENDINGCLAIM.md  E1C_COMPOSITION_DEPTH.md  E1D_GENESIS.md  IMPLEMENTATION_PLAN.md
